Adding readme file and some updates

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 
         <div class="home-bg">
             <img class="home-bg-img" src="assets\home-bg2.jpg" alt="">
+            <img class="home-bg-img2" src="assets\home-bg3.jpg" alt="">
         </div>
 
         <div class="home-quote">
