updated but not completed work

--- a/calendar.html
+++ b/calendar.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Friday Challenge</title>
     <link rel="stylesheet" type="text/css" href="Styles/layout.css">
+    <link rel="stylesheet" type="text/css" href="Styles/calendar.css">
     <link rel="stylesheet" type="text/css" href="global.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style>
@@ -22,13 +23,13 @@
 
         <div class="nav_elements active" id="home-bl">
             <img class="img" src="assets/home.svg" alt="home">
-            <a href="home.html">Home</a>
+            <a href="index.html">Home</a>
         </div>
 
 
         <div class="nav_elements" id="calendar-bl">
             <img class="img" src="assets/calendar.svg" alt="calendar">
-            <a href="">Calendar</a>
+            <a href="calendar.html">Calendar</a>
 
         </div>
 
@@ -42,8 +43,112 @@
             <a href="">Games</a>
         </div>
     </nav>
-    
-    </main>
+
+    <div class="calendar-main">
+        <div class="calendar-main-1">
+
+            <div class="scss_block">
+                <p class="titles-of-blocks">SCSS</span>
+                <p class="text-in-block">Try mixin</p>
+                <div class="SCSS_red_row"></div>
+            </div>
+
+            <div class="react_block">
+                <p class="titles-of-blocks">React</p>
+                <p class="text-in-block ">Lift state up</p>
+                <div class="react_yellow_row"></div>
+            </div>
+
+            <div class="php_block">
+                <p class="titles-of-blocks">PHP</p>
+                <p class="text-in-block">Use isset()</p>
+                <div class="php_green_row"></div>
+            </div>
+
+            <!-- <div class="plus_block">
+                <p class="plus_text">+</p>
+            </div> -->
+
+        </div>
+
+        <div class="calendar-main-2">
+            <p class="text-january"><svg width="25" height="17" viewBox="0 0 25 17" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M0.457673 7.39649L6.70767 1.14648C7.31802 0.536133 8.30679 0.536133 8.91714 1.14648C9.5275 1.75684 9.5275 2.74561 8.91714 3.35596L5.33682 6.9375H23.4374C24.3012 6.9375 24.9999 7.63623 24.9999 8.5C24.9999 9.36377 24.3012 10.0625 23.4374 10.0625H5.33682L8.91983 13.6455C9.53018 14.2559 9.53018 15.2446 8.91983 15.855C8.30997 16.4649 7.3212 16.4658 6.71036 15.855L0.460358 9.60499C-0.152679 8.99317 -0.152679 8.00684 0.457673 7.39649Z"
+                        fill="black" />
+                </svg> January <svg width="25" height="17" viewBox="0 0 25 17" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M24.541 9.60352L18.291 15.8535C17.6802 16.4644 16.6914 16.4634 16.0815 15.8535C15.4712 15.2432 15.4712 14.2544 16.0815 13.644L19.668 10.0625H1.5625C0.69873 10.0625 0 9.36426 0 8.45606C0 7.54786 0.69873 6.9375 1.5625 6.9375H19.668L16.085 3.35449C15.4746 2.74414 15.4746 1.75537 16.085 1.14502C16.6953 0.534668 17.6841 0.534668 18.2944 1.14502L24.5444 7.39502C25.1514 8.00684 25.1514 8.99317 24.541 9.60352Z"
+                        fill="black" />
+                </svg>
+            </p>
+
+
+            <div class="w-days">
+                <div>Tue</div>
+                <div>Mon</div>
+                <div>Wed</div>
+                <div>Thu</div>
+                <div>Fri</div>
+                <div>Sat</div>
+                <div>Sun</div>
+            </div>
+            <hr class="hr2">
+            <div class="all-month-days">
+               
+                <div class="d-grey-clr">27</div>
+                <div class="d-grey-clr">28</div>
+                <div class="d-grey-clr">29</div>
+                <div class="d-grey-clr">30</div>
+                <div class="d-grey-clr">31</div>
+                <div class="present-m-days">1</div>
+                <div class="present-m-days">2</div>
+                <div class="present-m-days">3</div>
+                <div class="present-m-days">4</div>
+                <div class="present-m-days">5</div>
+                <div class="present-m-days">6</div>
+                <div class="present-m-days">7</div>
+                <div class="present-m-days">8</div>
+                <div class="present-m-days">9</div>
+                <div class="present-m-days">10</div>
+                <div class="present-m-days">11</div>
+                <div class="present-m-days">12</div>
+                <div class="present-m-days">13</div>
+                <div class="present-m-days active">14</div>
+                <div class="present-m-days">15</div>
+                <div class="present-m-days">16</div>
+                <div class="present-m-days">17</div>
+                <div class="present-m-days">18</div>
+                <div class="present-m-days">19</div>
+                <div class="present-m-days">20</div>
+                <div class="present-m-days">21</div>
+                <div class="present-m-days">22</div>
+                <div class="present-m-days">23</div>
+                <div class="present-m-days">24</div>
+                <div class="present-m-days">25</div>
+                <div class="present-m-days">26</div>
+                <div class="present-m-days">27</div>
+                <div class="present-m-days">28</div>
+                <div class="present-m-days">29</div>
+                <div class="present-m-days">30</div>
+                <div class="present-m-days">31</div>
+                <div class="d-grey-clr">1</div>
+                <div class="d-grey-clr">2</div>
+                <div class="d-grey-clr">3</div>
+                <div class="d-grey-clr">4</div>
+                <div class="d-grey-clr">5</div>
+                <div class="d-grey-clr">6</div>
+
+            </div>
+        </div>
+
+    </div>
+
+    <div class="plus_block">
+        <p class="plus_text">+</p>
+    </div>
 
     <footer>
         <div class="footer_line"></div>
