--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <div class="nav_elements" id="calendar-bl">
             <img class="img" src="assets/calendar.svg" alt="calendar">
-            <a href="">Calendar</a>
+            <a href="calendar.html">Calendar</a>
 
         </div>
 
